--- a/VKAnalyzer/Views/Vk/InProgress.cshtml
+++ b/VKAnalyzer/Views/Vk/InProgress.cshtml
@@ -6,5 +6,5 @@
 
 <h2>Ваш запрос отправлен на обработку</h2>
 <p>
-    Вы можете посмотреть результаты своих запросов по @Html.ActionLink("ссылке", "ListOfResults", "Vk").
+    Вы можете посмотреть результаты своих запросов по @Html.ActionLink("ссылке", "Results", "Vk").
 </p>
