--- a/VKAnalyzer/Views/Vk/Results.cshtml
+++ b/VKAnalyzer/Views/Vk/Results.cshtml
@@ -7,7 +7,9 @@
 
 <h2>Доступные результаты</h2>
 
-
+<h3>@Html.ActionLink("Когортный анализ", "Results", "CohortAnalysis")</h3>
+<h3>@Html.ActionLink("Анализ продаж", "Results", "SalesAnalysis")</h3>
+@*<h3>@Html.ActionLink("Мемология", "Results", "Memology")</h3>*@
 <h3>@Html.ActionLink("Аффинити индекс", "Results", "AffinityIndex")</h3>
 
 <h3>Когортный анализ</h3>
