--- a/VKAnalyzer/Views/SalesAnalysis/Results.cshtml
+++ b/VKAnalyzer/Views/SalesAnalysis/Results.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Список результатов</h2>
+<h2>Анализ продаж: список результатов</h2>
 
 <table class="table table-responsive table-bordered">
     <thead>
