--- a/VKAnalyzer/Views/SalesAnalysis/Index.cshtml
+++ b/VKAnalyzer/Views/SalesAnalysis/Index.cshtml
@@ -17,7 +17,7 @@
 
 <h2>Когортный анализ продаж</h2>
 
-@using (Html.BeginForm("Analyse", "SalesAnalysis", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Analyze", "SalesAnalysis", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <hr />
