--- a/VKAnalyzer/Views/Service/Index.cshtml
+++ b/VKAnalyzer/Views/Service/Index.cshtml
@@ -12,7 +12,7 @@
     <tbody>
         <tr>
             <th>
-                @Html.ActionLink("Когортный анализ активностей", "Index", "Vk")
+                @Html.ActionLink("Когортный анализ активностей", "Index", "CohortAnalysis")
             </th>
             <th>
                 <p>
